--- a/scss/style.css
+++ b/scss/style.css
@@ -1,115 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap");
 /* font-family: 'Heebo', sans-serif; */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none !important;
-}
-
-header .navbar {
-  font-size: 20px;
-  background-color: rgb(2, 57, 128) !important;
-  z-index: 2;
-}
-header .navbar .img-navbar {
-  height: 160px;
-}
-header .navbar .nav-link {
-  color: white !important;
-}
-header .navbar .nav-link:hover {
-  color: black !important;
-}
-
-body {
-  margin: 0;
-  background-color: rgb(141, 141, 141);
+/*pages inicio*/
+.home {
   font-family: "Heebo", sans-serif;
-}
-body h1 {
-  text-align: center;
-  margin-top: 20px;
-  color: white;
-  font-size: 30px !important;
-}
-body h6 {
-  font-size: 20px !important;
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  color: black;
-}
-body h3 {
-  color: white;
-  text-align: center;
-  font-size: larger;
-  font-weight: 650;
-}
-body h2 {
-  margin: 20px 10px 10px 10px;
-  color: black;
-  text-align: center;
-}
-body h2:hover {
-  color: rgb(2, 57, 128);
-}
-
-footer {
+  display: grid;
   width: 100%;
-  height: 100%;
+  height: 1000px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(1, 1fr);
 }
-footer nav a {
-  font-family: "Heebo", sans-serif;
-  padding-right: 10px;
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  justify-content: space-between;
-  font-size: 18px;
-}
-footer nav a:hover {
-  color: rgb(0, 0, 0);
-}
-footer .container__footer {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: auto;
-  margin: auto;
-  height: 170px;
-  background-color: rgb(2, 57, 128);
-  color: rgb(255, 255, 255);
-  font-family: "Heebo", sans-serif;
-}
-footer .container__footer .logo1 img {
-  height: 160px;
-  margin-bottom: 10px;
-}
-footer .container__footer h4 {
-  font-size: 23px !important;
-}
-footer .container__footer h5 {
-  font-size: 18px !important;
-  margin-top: 12px;
-}
-
-.navegacion {
-  margin: 10px;
-}
-
-.contacto {
-  font-family: "Heebo", sans-serif !important;
-  margin: 10px;
-}
-
-.redes_sociales {
-  margin: 10px;
-}
-
-footer i {
+.home .foto {
+  border: 1px solid #000;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
   font-size: 20px;
-  margin-left: 33px;
+}
+.home .img1 {
+  background-image: url(../multimedia/planta.jpg);
+}
+.home .img2 {
+  background-image: url(../multimedia/descarga2.jpg);
+}
+.home .img3 {
+  background-image: url(../multimedia/movimiento\ de\ suelo.jpg);
+}
+.home .img4 {
+  background-image: url(../multimedia/planta4.png);
 }
 
 .vw_truck {
@@ -187,34 +104,6 @@ section {
   border-radius: 10px;
 }
 
-.home {
-  font-family: "Heebo", sans-serif;
-  display: grid;
-  width: 100%;
-  height: 1000px;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-}
-.home .foto {
-  border: 1px solid #000;
-  background-position: center;
-  background-size: cover;
-  text-align: center;
-  font-size: 20px;
-}
-.home .img1 {
-  background-image: url(../multimedia/planta.jpg);
-}
-.home .img2 {
-  background-image: url(../multimedia/descarga2.jpg);
-}
-.home .img3 {
-  background-image: url(../multimedia/movimiento\ de\ suelo.jpg);
-}
-.home .img4 {
-  background-image: url(../multimedia/planta4.png);
-}
-
 .clients {
   font-family: "Heebo", sans-serif;
   display: grid;
@@ -281,7 +170,124 @@ iframe {
   text-align: center;
 }
 
-/*comienzan las media quare*/
+/*pages fin*/
+/*layout inicio*/
+header .navbar {
+  font-size: 20px;
+  background-color: rgb(2, 57, 128) !important;
+  z-index: 2;
+}
+header .navbar .img-navbar {
+  height: 160px;
+}
+header .navbar .nav-link {
+  color: white !important;
+}
+header .navbar .nav-link:hover {
+  color: black !important;
+}
+
+footer {
+  width: 100%;
+  height: 100%;
+}
+footer nav a {
+  font-family: "Heebo", sans-serif;
+  padding-right: 10px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  justify-content: space-between;
+  font-size: 18px;
+}
+footer nav a:hover {
+  color: rgb(0, 0, 0);
+}
+footer .container__footer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: auto;
+  margin: auto;
+  height: 170px;
+  background-color: rgb(2, 57, 128);
+  color: rgb(255, 255, 255);
+  font-family: "Heebo", sans-serif;
+}
+footer .container__footer .logo1 img {
+  height: 160px;
+  margin-bottom: 10px;
+}
+footer .container__footer h4 {
+  font-size: 23px !important;
+}
+footer .container__footer h5 {
+  font-size: 18px !important;
+  margin-top: 12px;
+}
+
+.navegacion {
+  margin: 10px;
+}
+
+.contacto {
+  font-family: "Heebo", sans-serif !important;
+  margin: 10px;
+}
+
+.redes_sociales {
+  margin: 10px;
+}
+
+footer i {
+  font-size: 20px;
+  margin-left: 33px;
+}
+
+body {
+  margin: 0;
+  background-color: rgb(141, 141, 141);
+  font-family: "Heebo", sans-serif;
+}
+body h1 {
+  text-align: center;
+  margin-top: 20px;
+  color: white;
+  font-size: 30px !important;
+}
+body h6 {
+  font-size: 20px !important;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  color: black;
+}
+body h3 {
+  color: white;
+  text-align: center;
+  font-size: larger;
+  font-weight: 650;
+}
+body h2 {
+  margin: 20px 10px 10px 10px;
+  color: black;
+  text-align: center;
+}
+body h2:hover {
+  color: rgb(2, 57, 128);
+}
+
+/*layout fin*/
+/*base inicio*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none !important;
+}
+
+/*base fin*/
+/*comienzan las media quaries*/
 @media only screen and (max-width: 1215px) {
   section {
     display: grid;
@@ -596,4 +602,6 @@ iframe {
   .boton {
     margin-top: 50px;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+/*terminan las media quaries*/
+/*# sourceMappingURL=style.css.map */
